added css and html changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Vertical Timeline</title>
-  </head>
-  <body>
-
-  </body>
-</html>
+<head>
+  <meta charset="utf-8">
+  <script src="https://kit.fontawesome.com/e501839246.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <title>Vertical Timeline</title>
+</head>
+<body>
+  <div class="container">
+    <div class="timeline">
+      <ul>
+        <li class="item1">
+          <div class="timeline-pencil"><i class="fas fa-pencil-alt"></i></div>
+          <div class="item1info"><h1>TITLE</h1><button class="time1">May 1 2016</button><p>
+            This is the first box on the timeline. Very simple, very boring. The next one should be better!</p>
+            <button class="moreButton">More</button></div>
+          </li>
+          <li class="item2">
+            <div class="timeline-pencil"><i class="fas fa-pencil-alt"></i></div>
+            <div class="item2info">
+              <div class="itemPhoto"><button class="time2">May 25 2016</button>
+                <h1>DOG card</h1><img src="./images/vertical_timeline_doggy.jpg"></div>
+                <p>This is dog. Enjoy. He (or she) is beautiful. This image was uploaded from the internet which means... i have never had the pleasure of meeting this dog in real life. :( Don't you wish you could?</p><button class="moreButton">More</button>
+                </div>
+              </li>
+              <li class="item3">
+                <div class="timeline-pencil"><i class="fas fa-pencil-alt"></i></div>
+                <div class="item3info"><h1>INFO</h1><button class="time1">June 3 2016</button><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p></div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </body>
+        </html>
